# torch-check

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  about.hbs  about.toml
.github/workflows/: ci.yml  metadata-check.yml  release.yml
data/: cuda-driver-rules.json  pytorch-release-rules.json  upstream-observed.json
data/schemas/: output-v1.schema.json
scripts/: check-upstream-metadata.sh  check_reviewed_metadata.py  install.sh  observe_upstream_metadata.py
scripts/tests/: test_check_reviewed_metadata.py  test_install.sh  test_observe_upstream_metadata.py
src/: cli.rs  core.rs  detect.rs  index.rs  lib.rs  main.rs  process.rs  resolver.rs  verify.rs
tests/: cli_contract.rs  live_index.rs  output_contract.rs
tests/fixtures/cuda/: nvcc-12.4.txt
tests/fixtures/nvidia/: a100.csv  v100-legacy.csv
tests/fixtures/python/: cp311.json  cp313.json
tests/snapshots/: cli_contract__long_help_is_snapshotted.snap  output_contract__recommendation_json_contract_is_snapshotted.snap
