[package]
name = "torch-check"
version = "0.1.0"
authors = ["Eito Yoneyama"]
edition = "2024"
rust-version = "1.85"
description = "Diagnose a Python/NVIDIA environment and recommend an installable PyTorch wheel"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rice8y/torch-check"
repository = "https://github.com/rice8y/torch-check"
documentation = "https://docs.rs/torch-check"
publish = ["crates-io"]
keywords = ["pytorch", "cuda", "nvidia", "diagnostics", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**",
    "/data/cuda-driver-rules.json",
    "/data/pytorch-release-rules.json",
    "/data/schemas/**",
    "/tests/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/SECURITY.md",
    "/LICENSE",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[lib]
name = "torch_check"
path = "src/lib.rs"

[[bin]]
name = "torch-check"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.2"
csv = "1.3"
directories = "6.0"
fs2 = "0.4"
futures-util = "0.3"
html5ever = "0.35"
libc = "0.2"
pep440_rs = "0.7"
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["charset", "gzip", "http2", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1"
terminal_size = "0.4"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-width = "0.2"
url = { version = "2.5", features = ["serde"] }
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43", features = ["json", "redactions"] }
jsonschema = "0.47"
predicates = "3.1"
proptest = "1.7"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
assigning_clones = "allow"
doc_markdown = "allow"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
